# sample-plugin

./: CLAUDE.md  README.md
.github/workflows/: backend-ci.yml  release.yml
backend-plugin-sample/: .annotation_safe_list.yml  README.md  pyproject.toml  test_settings.py  tox.ini
backend-plugin-sample/docs/: conf.py  index.rst  openedx_plugin_sample.rst  testing.rst
backend-plugin-sample/src/openedx_plugin_sample/: __init__.py  admin.py  apps.py  models.py  pipeline.py  serializers.py  signals.py  urls.py  views.py
backend-plugin-sample/tests/: test_api.py  test_models.py  test_pipeline.py  test_plugin_integration.py  test_signals.py
brand/: README.md
brand-sample/: .gitignore  README.md  package.json
brand-sample/src/: README.md  package-lock.json  package.json
frontend-app-sample/: README.md  package.json  tsconfig.json
frontend-app-sample/src/: CourseList.tsx  app.tsx  index.ts
frontend-plugin-sample/: README.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
frontend-plugin-sample/src/: CourseList.jsx  app.jsx  index.jsx  plugin.jsx
platform-plugin-sample/: README.md  pyproject.toml  test_settings.py  tox.ini
platform-plugin-sample/docs/: conf.py  index.rst  platform_plugin_sample.rst  testing.rst
platform-plugin-sample/src/platform_plugin_sample/: apps.py  models.py  pipeline.py  (+4 more)
platform-plugin-sample/tests/: test_api.py  test_models.py  test_plugin_integration.py
tutor/: README.md
tutor-contrib-sample/: README.md  pyproject.toml
tutor-contrib-sample/tutorsample/: plugin.py
tutor/tutorsampleplugin/: plugin.py
(+7 files in other folders)
